# frothy

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  PROGRESS.md  README.md  TIMELINE.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benchmarks/: frothy_runtime_bench.c
boards/: README.md
boards/esp32-devkit-v1/: WORKSHOP.md  board.json  ffi.c  ffi.h
boards/esp32-devkit-v4-game-board/: WORKSHOP.md  board.json  ffi.c  ffi.h
boards/posix/: board.json  ffi.c  ffi.h
build-default-helper/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frothy_board_pins.h  frothy_eval_tests  frothy_snapshot_tests
build-default-workshop/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frothy_board_base_lib.h
build-review-v4/: CMakeCache.txt  CTestTestfile.cmake  Frothy  Makefile  cmake_install.cmake  frothy_board_base_lib.h  frothy_eval_tests  frothy_ffi_tests  frothy_parser_tests  frothy_project_ffi_legacy_no_weak_tests  frothy_project_ffi_legacy_tests  frothy_project_ffi_maintained_no_weak_tests  frothy_project_ffi_maintained_tests  frothy_runtime_bench  frothy_shell_tests  frothy_snapshot_tests  frothy_tm1629_board_tests  frothy_tm1629_runtime_tests
build-tm1629/: CMakeCache.txt  CTestTestfile.cmake  Frothy  Makefile  cmake_install.cmake  frothy_eval_tests  frothy_ffi_tests  frothy_parser_tests  frothy_project_ffi_legacy_no_weak_tests  frothy_project_ffi_legacy_tests  frothy_project_ffi_maintained_no_weak_tests  frothy_project_ffi_maintained_tests  frothy_runtime_bench  frothy_shell_tests  frothy_snapshot_tests
build-v4-helper/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frothy_board_base_lib.h  frothy_eval_tests  frothy_snapshot_tests  frothy_tm1629_board_tests  frothy_tm1629_runtime_tests
build-v4-proof/: CMakeCache.txt  CTestTestfile.cmake  Frothy  Makefile  cmake_install.cmake  frothy_board_pins.h  frothy_eval_tests  frothy_ffi_tests  frothy_parser_tests  frothy_project_ffi_legacy_no_weak_tests  frothy_project_ffi_legacy_tests  frothy_project_ffi_maintained_no_weak_tests  frothy_project_ffi_maintained_tests  frothy_runtime_bench  frothy_shell_tests  frothy_snapshot_tests  frothy_tm1629_board_tests  frothy_tm1629_runtime_tests
build-v4-workshop/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frothy_board_base_lib.h  frothy_snapshot_tests  frothy_tm1629_board_tests
cmake/: embed_froth.cmake  froth_board_assets.cmake
docs/adr/: 000-template.md  001-cell-width.md  004-value-tagging.md  033-link-transport-v1.md  034-console-multiplexer-architecture.md  035-host-daemon-architecture.md  039-host-tooling-ux-and-daemon-lifecycle.md  048-exclusive-live-session-transport.md  054-first-froth-cellspace-profile.md  058-developer-surface-build-directory-and-root-makefile.md  059-version-spine.md  060-distribution-pipeline.md  100-repo-and-release-identity.md  101-stable-top-level-slot-model.md  102-frothy32-value-representation.md  103-non-capturing-code-value-model.md  104-cells-store-profile.md  105-canonical-ir-as-persisted-code-form.md  106-snapshot-format-and-overlay-walk-rules.md  107-interactive-profile-boot-and-interrupt.md  108-frothy-ffi-boundary.md  109-repo-control-surface-and-proof-path.md  110-single-owner-control-session-transport.md  111-vscode-extension-owned-control-session.md  112-next-stage-language-growth-and-recovery-boundary.md  113-manifest-owned-project-target-selection.md  114-next-stage-structural-surface-and-recovery-shape.md  115-first-workspace-image-flow-tranche.md  116-targeted-session-start-and-thin-follow-on-control-docs.md  117-record-value-representation-and-persistence.md  117-workshop-base-image-board-library-surface.md  118-explicit-evaluator-frame-stack-for-canonical-ir-execution.md  119-tm1629-board-base-surface-and-registry.md  120-cli-command-and-home-identity.md  121-workshop-base-image-board-library-surface.md  122-public-workshop-release-surface.md  123-post-v0_1-embedded-tool-surface.md  README.md
docs/archive/: README.md
docs/audit/: Frothy_Repo_Audit_2026-04.md
docs/guide/: Frothy_From_The_Ground_Up.md  Frothy_Workshop_Clean_Machine_Validation.md  Frothy_Workshop_Design.md  Frothy_Workshop_Install_Quickstart.md  Frothy_Workshop_Quick_Reference.md
docs/reference/: Froth_Substrate_References.md  Frothy_Retained_Substrate_Manifest.md
docs/roadmap/: F1_Runtime_Hardening_Benchmark_Notes.md  Frothy_Development_Roadmap_v0_1.md  Frothy_Embedded_Tool_Surface_Tranche_1.md  Frothy_M9_Board_FFI_Closeout.md  Frothy_Post_v0_1_Priorities_And_Workshop_Prep.md  Frothy_Workshop_DRAM_Tranche_2026-04-15.md  Frothy_Workshop_Rehearsal_Closeout_2026-04-14.md  Frothy_Workshop_Run_Spec_2026-04-17.md  Frothy_Workspace_Image_Flow_Tranche_1.md
docs/spec/: Froth_Interactive_Development_v0_5.md  README.md  (+4 more)
src/: froth_cellspace.c  froth_cellspace.h  froth_console.c  froth_console.h  froth_crc32.c  froth_crc32.h  froth_ffi.c  froth_ffi.h  froth_fmt.c  froth_fmt.h  froth_heap.c  froth_heap.h  froth_link.h  froth_slot_table.c  froth_slot_table.h  froth_snapshot.c  froth_snapshot.h  froth_stack.c  froth_stack.h  froth_tbuf.c  froth_tbuf.h  froth_transport.c  froth_transport.h  froth_types.h  froth_vm.c  froth_vm.h  frothy_base_image.c  frothy_base_image.h  frothy_boot.c  frothy_boot.h  frothy_console_compat.c  frothy_control.c  frothy_control.h  frothy_eval.c  frothy_eval.h  frothy_ffi.c  frothy_ffi.h  frothy_ffi_legacy.h  frothy_inspect.c  frothy_inspect.h  (+19 more)
targets/esp-idf/main/: CMakeLists.txt  main.c
tests/: esp_idf_board_config_smoke.sh  frothy_eval_test.c  frothy_ffi_test.c  frothy_parser_test.c  frothy_project_ffi_test.c  frothy_shell_test.c  frothy_snapshot_test.c  frothy_tm1629_board_test.c  frothy_tm1629_runtime_test.c  frothy_workshop_memory_test.c  tm1629_board_config_smoke.sh
tools/: firmware_manifest_files.go  package-firmware-release.sh  package-release.sh  release-common.sh  setup-esp-idf.sh  update-brew-formula.sh  update-homebrew-tap.sh  version-bump.sh  version-propagate.sh
workshop/: README.md  starter.frothy
(+263 files in other folders)
